--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.thymeleaf.mode=html
 spring.thymeleaf.cache=false
+spring.datasource.url=jdbc:mysql://localhost/os
+spring.datasource.username=webapp
+spring.datasource.password=@OrdemServi_co4!!
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
